--- a/src/app/alumno/pages/perfil/perfil.component.html
+++ b/src/app/alumno/pages/perfil/perfil.component.html
@@ -1,9 +1,9 @@
 <div class="card rounded-0 border-0 mb-4">
-    <figure class="coverimg w-100 h-300 mb-0 position-relative" style="background-image: url('assets/img/bg-1.jpg');">
+    <figure class="coverimg w-100 h-300 mb-0 position-relative" style="background-image: url('https://cdn.discordapp.com/attachments/1011378535186845790/1187179715610554419/cover_perfil_altux.png?ex=6595f244&is=65837d44&hm=1eedf669df3f2dba263d67cbe8800a2cc91d8a7f75e2f93d616befa7f59ba3e6&');">
         <!-- <div class="position-absolute bottom-0 end-0 m-3">
             <button class="btn btn-light"><i class="bi bi-camera"></i> Change Cover</button>
         </div> -->
-        <img src="assets/img/bg-1.jpg" class="" style="display: none;" />
+        <img src="https://cdn.discordapp.com/attachments/1011378535186845790/1187179715610554419/cover_perfil_altux.png?ex=6595f244&is=65837d44&hm=1eedf669df3f2dba263d67cbe8800a2cc91d8a7f75e2f93d616befa7f59ba3e6&" class="" style="display: none;" />
     </figure>
     <div class="card-body">
         <div class="container px-0">
@@ -91,7 +91,8 @@
                         </div>
                         <div class="col">
                             <p class="text-secondary small mb-1">Cumpleaños</p>
-                            <p>{{profile.fecha_naciiento}}</p>
+                            <p>Próximamente</p>
+                            <!-- <p>{{profile.fecha_naciiento}}</p> -->
                         </div>
                     </div>
                 </div>
