--- a/src/app/alumno/pages/academico/academico.component.html
+++ b/src/app/alumno/pages/academico/academico.component.html
@@ -33,25 +33,29 @@ allowfullscreen="allowfullscreen" allow="autoplay"></iframe> -->
                     </div>
                     <div class="row text-center" style="margin: 1% 1% 1% 1%;">
                         <div class="col-3">
-                            <p class="text-secondary small"><i class="bi bi-book avatar avatar-24 me-1"></i> <br>{{courses.course.detail.other_description.descripcion_general.num_creditos}}</p>
+                            <p class="text-secondary small"><i class="bi bi-book avatar avatar-24 me-1"></i> <br>
+                                {{courses.course.detail.other_description.descripcion_general.num_creditos}}</p>
                         </div>
                         <div class="col-3" style="border-left: 1px solid rgb(210, 206, 206);">
-                            <p class="text-secondary small"><i class="bi bi-clock avatar avatar-24 me-1"></i> <br>{{courses.course.detail.other_description.descripcion_general.duration}}</p>
+                            <p class="text-secondary small"><i class="bi bi-clock avatar avatar-24 me-1"></i> <br>
+                                {{courses.course.detail.other_description.descripcion_general.duration}}</p>
                         </div>
                         <div class="col-3" style="border-left: 1px solid rgb(210, 206, 206);">
-                            <p class="text-secondary small"><i class="bi bi-clipboard-check avatar avatar-24 me-1"></i> <br> {{courses.course.detail.other_description.descripcion_general.num_modulos}} Bloques</p>
+                            <p class="text-secondary small"><i class="bi bi-clipboard-check avatar avatar-24 me-1"></i> <br> 
+                                {{courses.course.detail.other_description.descripcion_general.num_modulos}} Bloques</p>
                         </div>
                         <div class="col-3" style="border-left: 1px solid rgb(210, 206, 206);">
-                            <p class="text-secondary small"><i class="bi bi-journal-bookmark avatar avatar-24 me-1"></i> <br> Semi-Presencial</p>
+                            <p class="text-secondary small"><i class="bi bi-journal-bookmark avatar avatar-24 me-1"></i> <br> 
+                                Semi-Presencial</p>
                         </div>
                     </div>
                     <div class="row mt-3" style="margin: 1% 1% 1% 1%;">
                         <div class="col">
                             <div class="progress h-5 mb-2 bg-light-theme">
-                                <div class="progress-bar bg-theme" role="progressbar" style="width: 50%" aria-valuenow="50" 
-                                aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-theme" role="progressbar" [style.width.%]="courses.porcentaje.toFixed(2)"
+                                aria-valuenow="courses.porcentaje.toFixed(2)" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <p class="small text-secondary">Estado Diplomado <span class="float-end">50%</span></p>
+                            <p class="small text-secondary">Estado Diplomado <span class="float-end">{{courses.porcentaje.toFixed(2)}}%</span></p>
                         </div>
                     </div>
                 </div>
