--- a/src/app/alumno/pages/academico/detalle/detalle.component.html
+++ b/src/app/alumno/pages/academico/detalle/detalle.component.html
@@ -276,6 +276,7 @@
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
             <hr>
+            <a href="{{url_doc.mat_url_doc}}" target="_blank" type="button" class="btn btn-primary text-light mx-2"> Descargar</a>
             <button class="btn btn-danger text-light" (click)="closeModal()"> Cerrar</button>
         </div>
     </div>
@@ -300,8 +301,7 @@
     </div>
     <div class="modal-body row">
         <div class="col-sm-12 col-md-12 col-lg-12 mb-2">
-            <iframe src="https://drive.google.com/file/d/1UM0JeMv_9doVSuOXW9xiTclyj5YvyIy0/preview" width="640" 
-                height="480" allow="autoplay"></iframe>
+            <iframe [src]="url_class | safe" width="100%" height="480" allow="autoplay" allowFullScreen="true"></iframe>
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
             <hr>
