--- a/src/app/alumno/pages/dashboard/dashboard.component.html
+++ b/src/app/alumno/pages/dashboard/dashboard.component.html
@@ -268,9 +268,9 @@
                                        (change)="selectDiplomado($event)">
                             </ng-select>
                         </form>
-                    </div>
+                    </div>  
                 </div>
-                <div class="card-body px-0" *ngIf="detail_diplomado">
+                <div class="card-body" *ngIf="detail_diplomado">
                     <div class="row">
                         <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
                             <div class="card border-0">
@@ -278,19 +278,19 @@
                                     <div class="row align-items-center">
                                         <div class="col-auto">
                                             <div class="circle-small theme-blue">
-                                                <circle-progress class="d-block vm" [percent]="detail_diplomado.porcen_asistencia" [radius]="21" [outerStrokeWidth]="4" 
+                                                <circle-progress classw="d-block vm" [percent]="(detail_diplomado.porcen_asistencia).toFixed(2)" [radius]="21" [outerStrokeWidth]="4" 
                                                     [innerStrokeWidth]="4" [space]="-4" [outerStrokeColor]="'var(--WinDOORS-theme)'" 
                                                     [innerStrokeColor]="'rgba(var(--WinDOORS-theme-rgb), 0.2)'" [animation]="true" 
                                                     [animationDuration]="300" [showTitle]="false" [showSubtitle]="false" [titleFontSize]="'15'" 
                                                     [showUnits]="false" [backgroundPadding]="0"></circle-progress>
                                                 <div class="avatar h6 bg-light-blue rounded-circle">
-                                                    <i class="bi bi-pc-display-horizontal"></i>
+                                                    <i class="bi bi-check-circle"></i>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <p class="text-secondary small mb-1">Asistencia</p>
-                                            <h5 class="fw-medium">{{detail_diplomado.porcen_asistencia}}%</h5>
+                                            <h5 class="fw-medium">{{(detail_diplomado.porcen_asistencia).toFixed(2)}}%</h5>
                                         </div>
                                     </div>
                                 </div>
@@ -302,7 +302,7 @@
                                         </div>
                                         <div class="col-6 border-left-dashed">
                                             <p class="text-secondary small mb-1">Total Clases</p>
-                                            <p>{{detail_diplomado.cantidad_clases}}</p>
+                                            <p>{{detail_diplomado.cantidad_clases_total}}</p>
                                         </div>
                                     </div>
                                 </div>
@@ -314,19 +314,19 @@
                                     <div class="row align-items-center">
                                         <div class="col-auto">
                                             <div class="circle-small theme-green">
-                                                <circle-progress class="d-block vm" [percent]="detail_diplomado.porcen_notas" [radius]="21" [outerStrokeWidth]="4" 
+                                                <circle-progress class="d-block vm" [percent]="(detail_diplomado.porcen_notas).toFixed(2)" [radius]="21" [outerStrokeWidth]="4" 
                                                     [innerStrokeWidth]="4" [space]="-4" [outerStrokeColor]="'var(--WinDOORS-theme)'" 
                                                     [innerStrokeColor]="'rgba(var(--WinDOORS-theme-rgb), 0.2)'" [animation]="true" 
                                                     [animationDuration]="300" [showTitle]="false" [showSubtitle]="false" [titleFontSize]="'15'" 
                                                     [showUnits]="false" [backgroundPadding]="0"></circle-progress>
                                                 <div class="avatar h5 bg-light-green text-green rounded-circle">
-                                                    <i class="bi bi-people"></i>
+                                                    <i class="bi bi-clipboard-check"></i>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <p class="text-secondary small mb-1">Exámenes</p>
-                                            <h5 class="fw-medium">{{detail_diplomado.porcen_notas}}%</h5>
+                                            <h5 class="fw-medium">{{(detail_diplomado.porcen_notas).toFixed(2)}}%</h5>
                                         </div>
                                     </div>
                                 </div>
@@ -334,7 +334,7 @@
                                     <div class="row">
                                         <div class="col-6">
                                             <p class="text-secondary small mb-1">Exámenes Realizados</p>
-                                            <p>{{detail_diplomado.cantidad_notas}}</p>
+                                            <p>{{detail_diplomado.notas_desaprobadas+detail_diplomado.notas_aprobadas}}</p>
                                         </div>
                                         <div class="col-6 border-left-dashed">
                                             <p class="text-secondary small mb-1">Total Exámenes</p>
@@ -343,103 +343,88 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>                        
-                    </div>
-                    <!-- <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
-                        <div class="card border-0">
-                            <div class="card-body">
-                                <div class="row align-items-center">
-                                    <div class="col-auto">
-                                        <div class="circle-small theme-yellow">
-                                            <circle-progress class="d-block vm" [percent]="50" [radius]="21" [outerStrokeWidth]="4" [innerStrokeWidth]="4" [space]="-4" [outerStrokeColor]="'var(--WinDOORS-theme)'" [innerStrokeColor]="'rgba(var(--WinDOORS-theme-rgb), 0.2)'" [animation]="true" [animationDuration]="300" [showTitle]="false" [showSubtitle]="false" [titleFontSize]="'15'" [showUnits]="false" [backgroundPadding]="0"></circle-progress>
-                                            <div class="avatar h5 bg-light-yellow text-yellow rounded-circle">
-                                                <i class="bi bi-speedometer"></i>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-6">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <div class="row align-items-center">
+                                        <div class="col-auto">
+                                            <div class="circle-small theme-yellow">
+                                                <circle-progress class="d-block vm" [percent]="(detail_diplomado.porcen_notas).toFixed(2)" [radius]="21" [outerStrokeWidth]="4" 
+                                                    [innerStrokeWidth]="4" [space]="-4" [outerStrokeColor]="'var(--WinDOORS-theme)'" 
+                                                    [innerStrokeColor]="'rgba(var(--WinDOORS-theme-rgb), 0.2)'" [animation]="true" 
+                                                    [animationDuration]="300" [showTitle]="false" [showSubtitle]="false" 
+                                                    [titleFontSize]="'15'" [showUnits]="false" [backgroundPadding]="0"></circle-progress>
+                                                <div class="avatar h5 bg-light-yellow text-yellow rounded-circle">
+                                                    <i class="bi bi-book"></i>
+                                                </div>
                                             </div>
                                         </div>
+                                        <div class="col">
+                                            <p class="text-secondary small mb-1">Notas</p>
+                                            <h5 class="fw-medium">{{(detail_diplomado.porcen_notas).toFixed(2)}}%</h5>
+                                        </div>
                                     </div>
-                                    <div class="col">
-                                        <p class="text-secondary small mb-1">Notas</p>
-                                        <h5 class="fw-medium">47%</h5>
-                                    </div>
-                                    <div class="col-auto ps-0">
-                                        <div class="dropdown d-inline-block">
-                                            <a class="text-secondary dd-arrow-none" data-bs-toggle="dropdown" aria-expanded="false" data-bs-display="static" role="button">
-                                                <i class="bi bi-three-dots-vertical"></i>
-                                            </a>
-                                            <ul class="dropdown-menu dropdown-menu-end">
-                                                <li><a class="dropdown-item" href="javascript:void(0)">Edit</a></li>
-                                                <li><a class="dropdown-item" href="javascript:void(0)">Move</a></li>
-                                                <li><a class="dropdown-item text-danger" href="javascript:void(0)">Delete</a></li>
-                                            </ul>
+                                </div>
+                                <div class="card-footer border-top">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <p class="text-secondary small mb-1">Desaprobatorias</p>
+                                            <p class="text-danger">{{detail_diplomado.notas_desaprobadas}}</p>
+                                        </div>
+                                        <div class="col-6 border-left-dashed">
+                                            <p class="text-secondary small mb-1">Aprobatorias</p>
+                                            <p class="text-success">{{detail_diplomado.notas_aprobadas}}</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-footer border-top">
-                                <div class="row">
-                                    <div class="col-6">
-                                        <p class="text-secondary small mb-1">Desaprobatorias</p>
-                                        <p>55.68</p>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-6">
+                            <div class="card border-0">
+                                <div class="card-body">
+                                    <div class="row align-items-center">
+                                        <div class="col-auto">
+                                            <div class="circle-small theme-red">
+                                                <circle-progress class="d-block vm" [percent]="(detail_diplomado.porcen_asistencia).toFixed(2)" [radius]="21" [outerStrokeWidth]="4" 
+                                                    [innerStrokeWidth]="4" [space]="-4" [outerStrokeColor]="'var(--WinDOORS-theme)'" 
+                                                    [innerStrokeColor]="'rgba(var(--WinDOORS-theme-rgb), 0.2)'" [animation]="true" 
+                                                    [animationDuration]="300" [showTitle]="false" [showSubtitle]="false" 
+                                                    [titleFontSize]="'15'" [showUnits]="false" [backgroundPadding]="0"></circle-progress>
+                                                <div class="avatar h5 bg-light-red rounded-circle">
+                                                    <i class="bi bi-award"></i>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col">
+                                            <div class="row gx-0">
+                                                <div class="col">
+                                                    <p class="text-secondary small mb-1">Clases</p>
+                                                    <h5 class="fw-medium">{{(detail_diplomado.porcen_asistencia).toFixed(2)}}%</h5>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="col-6 border-left-dashed">
-                                        <p class="text-secondary small mb-1">Aprobatorias</p>
-                                        <p>70.75</p>
+                                </div>
+                                <div class="card-footer border-top">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <p class="text-secondary small mb-1">Inasistencia</p>
+                                            <p class="text-danger">{{detail_diplomado.cantidad_inasistencias}}</p>
+                                        </div>
+                                        <div class="col-6 border-left-dashed">
+                                            <p class="text-secondary small mb-1">Asistencia</p>
+                                            <p class="text-success">{{detail_diplomado.cantidad_asistencias}}</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6 mb-3">
-                        <div class="card border-0">
-                            <div class="card-body">
-                                <div class="row align-items-center">
-                                    <div class="col-auto">
-                                        <div class="circle-small theme-red">
-                                            <circle-progress class="d-block vm" [percent]="79" [radius]="21" [outerStrokeWidth]="4" [innerStrokeWidth]="4" [space]="-4" [outerStrokeColor]="'var(--WinDOORS-theme)'" [innerStrokeColor]="'rgba(var(--WinDOORS-theme-rgb), 0.2)'" [animation]="true" [animationDuration]="300" [showTitle]="false" [showSubtitle]="false" [titleFontSize]="'15'" [showUnits]="false" [backgroundPadding]="0"></circle-progress>
-                                            <div class="avatar h5 bg-light-red rounded-circle">
-                                                <i class="bi bi-bug"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col">
-                                        <div class="row gx-0">
-                                            <div class="col">
-                                                <p class="text-secondary small mb-1">Clases</p>
-                                                <h5 class="fw-medium">79%</h5>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-auto ps-0">
-                                        <div class="dropdown d-inline-block">
-                                            <a class="text-secondary dd-arrow-none" data-bs-toggle="dropdown" aria-expanded="false" data-bs-display="static" role="button">
-                                                <i class="bi bi-three-dots-vertical"></i>
-                                            </a>
-                                            <ul class="dropdown-menu dropdown-menu-end">
-                                                <li><a class="dropdown-item" href="javascript:void(0)">Edit</a></li>
-                                                <li><a class="dropdown-item" href="javascript:void(0)">Move</a></li>
-                                                <li><a class="dropdown-item text-danger" href="javascript:void(0)">Delete</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-footer border-top">
-                                <div class="row">
-                                    <div class="col-6">
-                                        <p class="text-secondary small mb-1">Clases asistidas</p>
-                                        <p class="text-green">421</p>
-                                    </div>
-                                    <div class="col-6 border-left-dashed">
-                                        <p class="text-secondary small mb-1">Total Clases</p>
-                                        <p class="text-yellow">50</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
                 <div class="card-footer bg-light-theme" *ngIf="detail_diplomado">
-                    <a href="javascript:void(0)" routerLink="/alumno/academico/{{detail_diplomado.diplomado_code}}" class="btn btn-sm btn-outline-theme">Ir al Programa</a>
+                    <a href="javascript:void(0)" routerLink="/alumno/academico/{{detail_diplomado.diplomado_code}}" 
+                        class="btn btn-sm btn-outline-theme">Ir al Programa</a>
                 </div>
             </div>
         </div>
