--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -8,10 +8,12 @@
             <a class="navbar-brand ms-2" routerLink="/alumno/panel">
                 <div class="row">
                     <div class="col-auto">
-                        <img src="https://web-altux-files.s3.amazonaws.com/Nosotros/Logo-Altux-solo.png" name="logoimage" class="blanco mx-100" alt="" /></div>
-                    <div class="col ps-0 align-self-center d-none d-sm-block">
-                        <h4 class="text-light mb-0" style="font-weight: 900;">ALTUX</h4>
+                        <img src="https://web-altux-files.s3.amazonaws.com/infinity/Logo+Infinity+by+altux+en+blanco+completo.png" 
+                            name="logoimage" class="blanco mx-100" alt="" />
                     </div>
+                    <!-- <div class="col ps-0 align-self-center d-none d-sm-block">
+                        <h4 class="text-light mb-0" style="font-weight: 900;">ALTUX</h4>
+                    </div> -->
                 </div>
             </a>
         </div>
