--- a/src/app/alumno/pages/dashboard/dashboard.component.html
+++ b/src/app/alumno/pages/dashboard/dashboard.component.html
@@ -222,7 +222,7 @@
                     <div class="row align-items-center">
                         <div class="col-auto">
                             <span class="avatar avatar-40 rounded mb-0 coverimg">
-                                <img src="https://web-altux-files.s3.amazonaws.com/Nosotros/Logo-Altux-solo.png" alt="">
+                                <img src="https://web-altux-files.s3.amazonaws.com/infinity/infinity+logo+by+altux+ico_.png" alt="">
                             </span>
                         </div>
                         <div class="col">
@@ -369,11 +369,11 @@
                                 <div class="card-footer border-top">
                                     <div class="row">
                                         <div class="col-6">
-                                            <p class="text-secondary small mb-1">Desaprobatorias</p>
+                                            <p class="text-secondary small mb-1">Desaprobados</p>
                                             <p class="text-danger">{{detail_diplomado.notas_desaprobadas}}</p>
                                         </div>
                                         <div class="col-6 border-left-dashed">
-                                            <p class="text-secondary small mb-1">Aprobatorias</p>
+                                            <p class="text-secondary small mb-1">Aprobados</p>
                                             <p class="text-success">{{detail_diplomado.notas_aprobadas}}</p>
                                         </div>
                                     </div>
@@ -426,7 +426,7 @@
                     <a href="javascript:void(0)" routerLink="/alumno/academico/{{detail_diplomado.diplomado_code}}" 
                         class="btn btn-sm btn-outline-theme parpadea">Ir al Programa</a>
                     <a href="https://api.whatsapp.com/send/?phone=51900176243" 
-                        target="_blank" class="btn btn-sm btn-outline-dark mx-3">Soporte Académico</a>
+                        target="_blank" class="btn btn-sm btn-outline-dark mx-3">Comunícate con tu asesor académico</a>
                 </div>
             </div>
         </div>
@@ -445,7 +445,7 @@
                     <div class="col-auto d-flex">
                         <span class="badge bg-red">Pago</span>
                         <span class="badge bg-blue mx-3">Clase</span>
-                        <span class="badge bg-green">Evaluacion</span>
+                        <span class="badge bg-green">Evaluación</span>
                     </div>
                 </div>
             </div>
