--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -37,7 +37,6 @@
                             <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
                         </a>
                     </li>
-
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" routerLink="/alumno/academico" routerLinkActive="active" (click)="menuclose()">
                             <div class="avatar avatar-40 icon text-light"><i class="bi bi-speedometer2"></i></div>
@@ -45,7 +44,27 @@
                             <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
                         </a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" routerLink="/alumno/pagos" routerLinkActive="active" (click)="menuclose()">
+                            <div class="avatar avatar-40 icon text-light"><i class="bi bi-cash-coin"></i></div>
+                            <div class="col text-light">Mis Pagos</div>
+                            <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" routerLink="/alumno/biblioteca" routerLinkActive="active" (click)="menuclose()">
+                            <div class="avatar avatar-40 icon text-light"><i class="bi bi-book"></i></div>
+                            <div class="col text-light">Biblioteca</div>
+                            <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" routerLink="/alumno/novedades" routerLinkActive="active" (click)="menuclose()">
+                            <div class="avatar avatar-40 icon text-light"><i class="bi bi-bell"></i></div>
+                            <div class="col text-light">Novedades</div>
+                            <div class="arrow text-light"><i class="bi bi-chevron-right"></i></div>
+                        </a>
+                    </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link" aria-current="page" routerLink="/pages/dashboard/finance" routerLinkActive="active" (click)="menuclose()">
                             <div class="avatar avatar-40 icon"><i class="bi bi-cash-coin"></i></div>
@@ -77,7 +96,6 @@
                             <div class="arrow"><i class="bi bi-chevron-right"></i></div>
                         </a>
                     </li> -->
-
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" routerLink="/alumno/perfil" routerLinkActive="active" (click)="menuclose()">
                             <div class="avatar avatar-40 icon text-light"><i class="bi bi-person-circle"></i></div>
@@ -474,7 +492,23 @@
             <div class="card-body" style="background-color: #003D97;">
                 <div class="row">
                     <div class="col-12 d-flex justify-content-between">
-                        <a routerLink="/alumno/perfil" routerLinkActive="active" 
+                        <!-- <a href="javascript:void(0)" routerLinkActive="active" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Notificaciones"
+                            class="btn btn-square btn-outline-secondary border-light text-light">
+                            <span class="bi bi-bell position-relative">
+                                <span class="position-absolute top-0 start-100 translate-middle p-1 bg-warning border border-light rounded-circle">
+                                    <span class="visually-hidden">New alerts</span>
+                                </span>
+                            </span>
+                        </a> -->
+                        <a href="javascript:void(0)" routerLinkActive="active" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Dashboard"
+                            class="btn btn-square btn-outline-secondary border-light text-light">
+                            <i class="bi bi-house-door"></i>
+                        </a>
+                        <a href="javascript:void(0)" routerLinkActive="active" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Académico"
+                            class="btn btn-square btn-outline-secondary border-light text-light">
+                            <i class="bi bi-speedometer2"></i>
+                        </a>
+                        <a routerLink="/alumno/perfil" routerLinkActive="active" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Perfil"
                             class="btn btn-square btn-outline-secondary border-light text-light">
                             <i class="bi bi-person-circle"></i>
                             <!-- <span class="bi bi-person-circle position-relative">
@@ -483,19 +517,8 @@
                                 </span>
                             </span> -->
                         </a>
-                        <a href="javascript:void(0)" routerLinkActive="active" 
+                        <a href="javascript:void(0)" (click)="signout()" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Cerrar Sesión"
                             class="btn btn-square btn-outline-secondary border-light text-light">
-                            <span class="bi bi-bell position-relative">
-                                <span class="position-absolute top-0 start-100 translate-middle p-1 bg-warning border border-light rounded-circle">
-                                    <span class="visually-hidden">New alerts</span>
-                                </span>
-                            </span>
-                        </a>
-                        <a href="javascript:void(0)" routerLinkActive="active" 
-                            class="btn btn-square btn-outline-secondary border-light text-light">
-                            <i class="bi bi-gear"></i>
-                        </a>
-                        <a href="javascript:void(0)" (click)="signout()" class="btn btn-square btn-outline-secondary border-light text-light">
                             <i class="bi bi-box-arrow-right"></i>
                         </a>
                     </div>
