--- a/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/src/app/shared/layout/sidebar/sidebar.component.html
@@ -500,15 +500,15 @@
                                 </span>
                             </span>
                         </a> -->
-                        <a href="javascript:void(0)" routerLinkActive="active" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Dashboard"
+                        <a routerLink="/alumno/panel" routerLinkActive="active"
                             class="btn btn-square btn-outline-secondary border-light text-light">
                             <i class="bi bi-house-door"></i>
                         </a>
-                        <a href="javascript:void(0)" routerLinkActive="active" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Académico"
+                        <a routerLink="/alumno/academico" routerLinkActive="active"
                             class="btn btn-square btn-outline-secondary border-light text-light">
                             <i class="bi bi-speedometer2"></i>
                         </a>
-                        <a routerLink="/alumno/perfil" routerLinkActive="active" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Perfil"
+                        <a routerLink="/alumno/perfil" routerLinkActive="active"
                             class="btn btn-square btn-outline-secondary border-light text-light">
                             <i class="bi bi-person-circle"></i>
                             <!-- <span class="bi bi-person-circle position-relative">
@@ -517,7 +517,7 @@
                                 </span>
                             </span> -->
                         </a>
-                        <a href="javascript:void(0)" (click)="signout()" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Cerrar Sesión"
+                        <a href="javascript:void(0)" (click)="signout()"
                             class="btn btn-square btn-outline-secondary border-light text-light">
                             <i class="bi bi-box-arrow-right"></i>
                         </a>
