--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -13,8 +13,9 @@
                         <h1 class="display-4">Bienvenido a</h1>
                         <p class="h4 fw-light mb-4">Infinity tu aula virtual inteligente.</p>
                         <p class="text-secondary small d-none d-md-block" style="text-align: justify;">
-                            Somos Altux, una Organización Educativa dedicada a difundir conocimientos de calidad y proponer aplicaciones 
-                            tecnológicas, capaces de contribuir a mejorar la calidad de vida de las diferentes regiones del Perú.
+                            Altux es una empresa de capacitación, enfocada en difundir programas de formación de alta calidad, diseñados para 
+                            mejorar el conocimiento y las competencias de los profesionales en diversas áreas; con el objetivo de contribuir 
+                            al crecimiento y mejora continua de las competencias laborales en el país.
                         </p>
                         <br>
                         <p class="h4 fw-light mb-4">Iniciar Sesión</p>
