--- a/src/app/shared/components/exam/modal-test/modal-test.component.html
+++ b/src/app/shared/components/exam/modal-test/modal-test.component.html
@@ -14,7 +14,7 @@
             <h4>USTED ESTA POR INICIAR SU EXAMEN</h4>
             <h6>Dispone de 01 hora para culminarlo</h6>
             <p>Terminado el tiempo, se cerrará automáticamente</p>
-            <p>Nota mínima aprobatoria 13 ptos.</p>
+            <p>Nota mínima aprobatoria 13 puntos.</p>
         </div>
     </div>
 </div>
