--- a/src/app/shared/components/exam/modal-finalizado/modal-finalizado.component.html
+++ b/src/app/shared/components/exam/modal-finalizado/modal-finalizado.component.html
@@ -1,7 +1,108 @@
-<br>
-<hr>
+<!-- <br>
+<hr> -->
 <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+    <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
+        <div class="card border-0 overflow-hidden">
+            <div class="card-body position-relative">
+                <div class="coverimg w-75 h-100 end-0 top-0 position-absolute cover-right-center-img" 
+                    style="background-image: url('assets/img/offer-1.png');">
+                    <img src=" assets/img/offer-1.png" class="w-100" alt="" style="display: none;" />
+                </div>
+                <div class="row align-items-center h-100">
+                    <div class="col-8 py-2">
+                        <h4 class="text-theme" *ngIf="!motrar_nota">{{titulo}}</h4>
+                        <h4 class="text-theme" *ngIf="motrar_nota">Tu Nota: {{nota_evaluacion}}</h4>
+                        <h5 class="fw-medium" *ngIf="motrar_nota && nota_evaluacion>13">¡Felicitaciones! ¡Aprobaste tu examen, sigue así!</h5>
+                        <h5 class="fw-medium" *ngIf="motrar_nota && nota_evaluacion<13">¡Oh! Vemos que no te fue bien en tu examen, te recuerdo que puedes dar tu examen sustitutorio. ¡Ánimo tú puedes!</h5>
+                        <p class="text-secondary">Estas son tus respuestas que has contestado en el examen.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 text-center mb-4">
+        <span class="badge bg-success">Correcto</span>
+        <span class="badge bg-danger mx-2">Incorrecto</span>
+        <span class="badge bg-warning text-dark">Sin responder</span>
+    </div>
+    <!-- <div class="col-lg-12 col-md-12 col-sm-12" *ngFor="let examen of preguntas, index as id">
+        <div class="card border-0 bg-gradient-theme-light theme-green h-100">
+            <div class="card-header">
+                <div class="row align-items-center">
+                    <div class="col">
+                        <h6 class="fw-medium">
+                            <i class="bi bi-people h5 me-1 avatar avatar-40 bg-light-theme rounded me-2"></i>
+                            {{id+1+'.-'}} {{examen.preguntas.texto}}
+                        </h6>
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer justify-content-center text-center" *ngIf="motrar_nota">
+                <div *ngIf="examen.respuesta">
+                    <a href="javajavascript:void(0)" class="btn btn-sm btn-link text-theme" *ngIf="examen.resultado">
+                        {{examen.respuesta}} <i class="bi bi-arrow-right vm"></i>
+                    </a>
+                    <a href="javajavascript:void(0)" class="btn btn-sm btn-link text-theme" *ngIf="!examen.resultado">
+                        {{examen.respuesta}} <i class="bi bi-arrow-right vm"></i>
+                    </a>
+                </div>
+                <div *ngIf="!examen.respuesta">
+                    <a target="_blank" class="tag theme-orange mb-2 me-2">
+                        Sin Responder
+                    </a>
+                </div>
+            </div>
+            <div class="card-footer justify-content-center text-center" *ngIf="!motrar_nota">
+                <div *ngIf="examen.respuesta">
+                    <a href="javajavascript:void(0)" class="btn btn-sm btn-link text-theme">
+                        {{examen.respuesta}} <i class="bi bi-arrow-right vm"></i>
+                    </a>
+                </div>
+                <div *ngIf="!examen.respuesta">
+                    <a target="_blank" class="tag theme-orange mb-2 me-2">
+                        Sin Responder
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <div class="col-lg-12 col-md-12 col-sm-12">
+        <div class="card border-0 mb-4">
+            <div class="card-footer">
+                <div *ngFor="let examen of preguntas, index as id">
+                    <h6 class="title">{{id+1+'.-'}} {{examen.preguntas.texto}}</h6>
+                    <div class="d-block text-center" *ngIf="motrar_nota">
+                        <div *ngIf="examen.respuesta">
+                            <a target="_blank" class="tag theme-green mb-2 me-2" *ngIf="examen.resultado">
+                                {{examen.respuesta}}
+                            </a>
+                            <a target="_blank" class="tag theme-red mb-2 me-2" *ngIf="!examen.resultado">
+                                {{examen.respuesta}}
+                            </a>
+                        </div>
+                        <div *ngIf="!examen.respuesta">
+                            <a target="_blank" class="tag theme-orange mb-2 me-2">
+                                Sin Responder
+                            </a>
+                        </div>
+                    </div>
+                    <div class="d-block text-center" *ngIf="!motrar_nota">
+                        <div *ngIf="examen.respuesta">
+                            <a target="_blank" class="tag theme-green mb-2 me-2">
+                                {{examen.respuesta}}
+                            </a>
+                        </div>
+                        <div *ngIf="!examen.respuesta">
+                            <a target="_blank" class="tag theme-orange mb-2 me-2">
+                                Sin Responder
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="col-lg-12 col-md-12 col-sm-12 text-center">
         <a class="text-success">
             <svg xmlns="http://www.w3.org/2000/svg" width="150" height="150" fill="currentColor" class="bi bi-patch-question" viewBox="0 0 16 16">
                 <path d="M8.05 9.6c.336 0 .504-.24.554-.627.04-.534.198-.815.847-1.26.673-.475 1.049-1.09 1.049-1.986 0-1.325-.92-2.227-2.262-2.227-1.02 0-1.792.492-2.1 1.29A1.71 1.71 0 0 0 6 5.48c0 .393.203.64.545.64.272 0 .455-.147.564-.51.158-.592.525-.915 1.074-.915.61 0 1.03.446 1.03 1.084 0 .563-.208.885-.822 1.325-.619.433-.926.914-.926 1.64v.111c0 .428.208.745.585.745z"/>
@@ -54,10 +155,10 @@
                             <br>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
-    </div>
-    </div>
+    </div> -->
 </div>
 <!-- SPINNER -->
 <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "triangle-skew-spin">
