--- a/src/app/ventas/pages/registro/registro.component.html
+++ b/src/app/ventas/pages/registro/registro.component.html
@@ -18,11 +18,11 @@
                         <ul class="nav nav-tabs nav-WinDOORS" id="navtabscard3" role="tablist">
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link active" id="tab13-tab" data-bs-toggle="tab" data-bs-target="#tab13" type="button" role="tab"
-                                    aria-controls="tab13-tab" aria-selected="true">Fichas</button>
+                                    aria-controls="tab13-tab" aria-selected="true">Leads</button>
                             </li>
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link" id="tab23-tab" data-bs-toggle="tab" data-bs-target="#tab23" type="button" role="tab" 
-                                    aria-controls="tab23" aria-selected="false">Leads</button>
+                                    aria-controls="tab23" aria-selected="false">Fichas</button>
                             </li>
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link" id="tab33-tab" data-bs-toggle="tab" data-bs-target="#tab33" type="button" role="tab" 
@@ -37,12 +37,12 @@
                     <div class="tab-pane fade show active" id="tab13" role="tabpanel" aria-labelledby="tab13-tab" style="margin: 1% 1% 1% 1%">
                         <h6 class="fw-medium">Tab 1</h6>
                         <h5 class="mb-3">We all are artist in our field. We all are able to find symmetry in our routine</h5>
-                        <app-fichas></app-fichas>
+                        <app-leads></app-leads>
                     </div>
                     <div class="tab-pane fade" id="tab23" role="tabpanel" aria-labelledby="tab23-tab" style="margin: 1% 1% 1% 1%">
                         <h6 class="fw-medium">Tab 2</h6>
                         <h5 class="mb-3">We all are artist in our field. We all are able to find symmetry in our routine</h5>
-                        <app-leads></app-leads>
+                        <app-fichas></app-fichas>
                     </div>
                     <div class="tab-pane fade" id="tab33" role="tabpanel" aria-labelledby="tab33-tab" style="margin: 1% 1% 1% 1%">
                         <h6 class="fw-medium">Tab 3</h6>
